--- a/index.html
+++ b/index.html
@@ -1,1 +1,17 @@
-Hello World
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <h2> ชื่อ-นามสกุล : นาย นนทพัทธ์ บุญประสิทธิ์ </h2>
+    <h2> ชื่อเล่น : นนท์ </h2>
+    <h2> วัน/เดือน/ปีเกิด : 26 ตุลาคม 2547 </h2>
+    <h2> มหาวิทยาลัย : มหาวิทยาลัยธรรมศาสตร์ </h2>
+    <h2> คณะ : วิศวกรรมศาตร์ สาขา คอมพิวเตอร์ </h2>
+    <img src = "picture.jpg" alt = "picture" width= "600" height= "800">
+
+</body>
+</html>
