--- a/index.html
+++ b/index.html
@@ -3,14 +3,43 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Introduce Myself</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #ecf695;
+            color: #333;
+            margin: 0;
+            padding: 0;
+        }
+
+        h1 {
+            text-align: center;
+            color: #71bdf2;
+        }
+
+        h2 {
+            text-align: center;
+            color: #71bdf2;
+        }
+
+        img {
+            display: block;
+            margin: 20px auto;
+            border-radius: 10px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+        }
+
+    </style>
 </head>
 <body>
+    <h1> Introduce Myself
     <h2> ชื่อ-นามสกุล : นาย นนทพัทธ์ บุญประสิทธิ์ </h2>
     <h2> ชื่อเล่น : นนท์ </h2>
     <h2> วัน/เดือน/ปีเกิด : 26 ตุลาคม 2547 </h2>
     <h2> มหาวิทยาลัย : มหาวิทยาลัยธรรมศาสตร์ </h2>
     <h2> คณะ : วิศวกรรมศาตร์ สาขา คอมพิวเตอร์ </h2>
+    <h2> วิชาที่ชอบ : CN331 </h2>
     <img src = "picture.jpg" alt = "picture" width= "600" height= "800">
 
 </body>
