--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
     <h2> วัน/เดือน/ปีเกิด : 26 ตุลาคม 2547 </h2>
     <h2> มหาวิทยาลัย : มหาวิทยาลัยธรรมศาสตร์ </h2>
     <h2> คณะ : วิศวกรรมศาตร์ สาขา คอมพิวเตอร์ </h2>
+    <h2> รหัสนักศึกษา : 6610685205 </h2>
     <h2> วิชาที่ชอบ : CN331 </h2>
     <img src = "picture.jpg" alt = "picture" width= "600" height= "800">
 
